--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,11 @@
     "name": "dburiy/filecacher",
     "description": "Simple php file cacher",
     "type": "library",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "license": "MIT",
     "require": {
-        "php": "^7.0"
+        "php": "^7.2",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {"Dburiy\\": "src"}
