--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "name": "dburiy/filecacher",
     "description": "Simple php file cacher",
     "type": "library",
-    "version": "1.0.6",
+    "version": "1.1.0",
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "ext-json": "*"
+        "ext-json": "*",
+        "psr/cache": "^1.0"
     },
     "autoload": {
         "psr-4": {"Dburiy\\": "src"}
@@ -22,6 +23,6 @@
         "phpstan/phpstan": "^0.12.99"
     },
     "scripts": {
-        "phpstan": "phpstan analyse -c phpstan.neon"
+        "phpstan": "phpstan analyse -c phpstan.neon --no-progress"
     }
 }
